2022-02-02 [1.42 Bld 218]

- Addition    : add DEFBIT for uPD7807...7809
- Change      : A couple of target-specific symbols now only appear
                in the symbol table if the respective target was
                actually used

2022-01-30 [1.42 Bld 217]

- Bugfix      : 2650: do not allow ANDZ R0 (decodes as HALT)
- Bugfix      : uPD780x: disallow some uPD781x-specific addressing modes
                for LDAX and STAX
- Addition    : support NEC uPD7807...7809
- Bugfix      : Do not attempt to expand string expansion for symbol
                names in quoted regions
- Bugfix      : The default for PADDING for 6805, 6809, 6816, 68RS08,
                and S12Z should be OFF

2022-01-19 [1.42 Bld 216]

- Bugfix      : Z80: add error messages about address/displacement
                overflow that got lost during address parser rework

2021-12-26 [1.42 Bld 215]

- Bugfix      : Z80: Allow register symbols for JP (IX/IY), forbid
                on Gameboy Z80

2021-12-23 [1.42 Bld 214]

- Addition    : Add some syntax variants for Sharp SM83
- Addition    : Allow SLI/SL1 as alias for SLIA/SLS on Z80UNDOC
- Addition    : Allow EXA as alias for EX AF,AF' on Z80
- Addition    : Allow EXD as alias for EX DE,HL on Z80
- Addition    : For undocumented Z80 instructions with extra
                destination reg, allow dest reg to be last arg
                instead of first
- Addition    : Allow register symbols for Z80

2021-11-22 [1.42 Bld 213]

- Bugfix      : Correct TMS1100 XMA instruction
- Addition    : Add Sharp LR35902 ('Gameboy Z80') as target
- Bugfix      : Allow (X0)/(X1) as argument on MN1613 LR
- Bugfix      : Allow lowercase register names  on MN1613 LR

2021-11-03 [1.42 Bld 212]

- Bugfix      : Do not print empty file name () on listing pages with symbol tables
- Addition    : Add CP-1600 target (contribution by Haruo Asano)

2021-10-03 [1.42 Bld 211]

- Bugfix      : Allow register aliases starting with period in 68K address expressions
