@@ -11,8 +11,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-const char *Version = "1.42 Beta [Bld 218]";
-const char *DebVersion = "1.42bld218-1";
+const char *Version = "1.42 Beta [Bld 219]";
+const char *DebVersion = "1.42bld219-1";
 LongInt VerNo = 0x142f;
 
 const char *InfoMessCopyright = "(C) 1992,2022 Alfred Arnold";
